force-app/main/default/objects/Cart__c/fields/Cart_Value__c.field-meta.xml
<CustomField>
    <fullName>Cart_Value__c</fullName>
    <label>Cart Value</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description></description>
</CustomField>