force-app/main/default/objects/Cart__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Carts</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person Account this cart belongs to (known customer).</description>
</CustomField>