force-app/main/default/objects/Cart__c/fields/Email_Consent__c.field-meta.xml
<CustomField>
    <fullName>Email_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the shopper opted in to marketing email earlier in the funnel (account signup / cart opt-in). Carried onto the recovery Lead so Agent 1 only emails consenting shoppers.</description>
    <label>Email Consent</label>
    <type>Checkbox</type>
</CustomField>