force-app/main/default/objects/Cart__c/fields/Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Item_Count__c</fullName>
    <label>Item Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <description></description>
</CustomField>