force-app/main/default/objects/Cart__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <type>Lookup</type>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Carts</relationshipLabel>
    <relationshipName>Carts</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lead this cart belongs to (pre-purchase).</description>
</CustomField>