force-app/main/default/objects/Cart__c/fields/Recovery_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Sent_At__c</fullName>
    <label>Recovery Sent At</label>
    <type>DateTime</type>
    <description>When abandoned-cart recovery was sent for this cart (idempotency for CartRecoverySweep).</description>
</CustomField>