force-app/main/default/objects/Cart__c/fields/Shopper_Email__c.field-meta.xml
<CustomField>
    <fullName>Shopper_Email__c</fullName><label>Shopper Email</label><type>Email</type>
    <description>Email captured during checkout for an abandoned cart (identity key).</description>
</CustomField>