force-app/main/default/objects/Cart__c/fields/Shopper_Name__c.field-meta.xml
<CustomField>
    <fullName>Shopper_Name__c</fullName><label>Shopper Name</label><type>Text</type><length>120</length>
</CustomField>