force-app/main/default/objects/Cart__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <description></description>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Recovered</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>