force-app/main/default/objects/Cart__c/fields/Woo_Cart_Id__c.field-meta.xml
<CustomField>
    <fullName>Woo_Cart_Id__c</fullName>
    <label>Woo Cart Id</label>
    <type>Text</type>
    <length>80</length>
    <externalId>true</externalId>
    <description>WooCommerce cart/session identifier.</description>
</CustomField>